--- a/templates/product_form_popup.html
+++ b/templates/product_form_popup.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     {% extends "base.html" %}
+
+    {% block title %}Add Product{% endblock %}
+
     {% block content %}
     <h2>Add Product</h2>
     <form id="product-form" method="post">
